<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MaterialDesing.MaterialDesing2">
    <TextView
        android:id="@+id/nav"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/registro2"
        android:textColor="@color/coloTexto2"
        android:layout_marginStart="265dp"
        android:textSize="20sp"
        android:layout_marginTop="6dp"
        />
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/bienvenida3"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/coloTexto2"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/mensaje2"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:textColor="@color/coloTexto2"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        />
    <EditText
        android:layout_width="370dp"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="15dp"
        android:hint="@string/email"
        android:background="@drawable/style_edit_text_material_desig"
        tools:ignore="Autofill,TextFields" />
    <EditText
        android:layout_width="370dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/style_edit_text_material_desig"
        android:hint="@string/password"
        tools:ignore="Autofill,TextFields" />


    <Button
        android:id="@+id/btnToast"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:text="@string/sesion2"
        android:textColor="@color/coloTexto2"
        android:background="@drawable/style_border_radius2"
        />
    <Button
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:text="@string/sesion3"
        android:textColor="@color/coloTexto2"
        android:background="@drawable/style_border_radius3"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/img2"
        android:layout_marginTop="10dp"
        tools:ignore="ContentDescription" />

</LinearLayout>