<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LinearLayout">
    <TextView
        android:id="@+id/Titulo"
        android:layout_width="322dp"
        android:layout_height="40dp"
        android:text="@string/titulo"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="#009688"
        android:textStyle="bold"
         />
    <ImageView
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/creditcard"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/name"
        android:layout_marginStart="30dp"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="260dp"
        android:layout_height="44dp"
        android:hint="@string/nombre"
        android:layout_marginStart="89dp"
        android:layout_marginTop="-45dp"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:background="@drawable/style_edit_text"
        android:importantForAutofill="no" />
    <ImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/card"
        android:layout_marginStart="30dp"
        tools:ignore="ContentDescription" />
    <EditText
        android:id="@+id/numeroDeTarjeta"
        android:layout_width="260dp"
        android:layout_height="44dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="-45dp"
        android:autofillHints="no"
        android:hint="@string/numero"
        android:inputType="number"
        android:textAlignment="center"
        android:background="@drawable/style_edit_text"
        android:textSize="20sp"
         />
    <EditText
        android:id="@+id/cvv"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="90dp"
        android:hint="@string/cvv"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:background="@drawable/style_edit_text"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/fecha"
        android:layout_width="154dp"
        android:layout_height="45dp"
        android:hint="@string/fecha"
        android:importantForAutofill="no"
        android:inputType="datetime"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_marginStart="195dp"
        android:layout_marginTop="-45dp"
        android:background="@drawable/style_edit_text"
         />
    <Button
        android:id="@+id/btn_agregar"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:text="@string/agregar"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:textColor="@color/coloTexto"
        android:background="@drawable/style_border_radius"
         />
    <Button
        android:id="@+id/btn_navegar"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:text="@string/navegarR"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:textColor="@color/coloTexto"
        android:background="@drawable/style_border_radius"
        />


</LinearLayout>